2010-03-01  Miguel de Dios  <miguel.dedios@artica.es>

	* extras/pandoradb_migrate_v3.0_to_v3.1.sql: update with the new data in
	the sql data file of pandora.
	
	include/config_process.php: update the version.

2010-03-01  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/gis_maps/configure_gis_map.php: erase console log in some parts
	in javascript, and fix the fill a hidden input with the levels of zoom in
	a connection.

2010-03-01  Miguel de Dios  <miguel.dedios@artica.es>

	* pandoradb_data.sql: add the default map from Open street map, and set
	active by default the GIS.
	
	* godmode/setup/gis_step_2.php: fix tiny bugs in the form that the default
	values for zooms were exchangeds.

2010-02-25  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php: use zoom level.
	
	* godmode/gis_maps/configure_gis_map.php: include the things about
	default zoom level in function "validateMapData", "getMapData" and add
	the function "getNumZoomLevelsOfConnectionDefault".

2010-02-25  Sancho Lerena  <slerena@artica.es>

	* godmode/alerts/configure_alert_template.php,
	godmode/alerts/alert_templates.php,
	godmode/alerts/configure_alert_action.php,
	godmode/alerts/alert_actions.php: Show/Edit group for templates and actions.

	* include/functions_ui.php: Alert information now show the default
	actions properly,and the action conditions (max/min).

	* include/functions_alerts.php: Added support on get_alert_templates_types
	for new alert type "onchange".

	* pandoradb.sql
	* extras/pandoradb_migrate_v3.0_to_v3.1.sql: Added new support for alert
	type "onchange".

	* godmode/alerts/alert_list.php: Alert information now shows the default
	action (if exist) and have a link to edit the template directly from here.

2010-02-25  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/agent_manager.php: fix dinamic show icon when change
	the select and show other icon the icon with "without status".

2010-02-25  Miguel de Dios  <miguel.dedios@artica.es>
